fixed bugs: photo-title not visible in fullscreen, loader-gifs background not fitting real background

--- a/photomap/static/css/core.styl
+++ b/photomap/static/css/core.styl
@@ -93,14 +93,6 @@ aside
   span
     margin 10%
 
-.mp-title-bar
-  width 100%
-  height 10%
-  border-bottom 1px solid black
-  text-align right
-#mp-gallery .mp-title-bar
-  margin 0
-
 /* ---------- end core classes ----------- */
 
 
