--- a/photomap/static/css/viewalbum-main.styl
+++ b/photomap/static/css/viewalbum-main.styl
@@ -61,7 +61,7 @@
   overflow hidden
 .mp-thumb
   float left
-  background $background-color-light
+  background $background-color
   transition
 
 .mp-gallery-inner
@@ -116,5 +116,9 @@
   width 100%
   height 60%
   float left
+
+.mp-fullscreen-photo-title
+  z-index 1201
+  color $font-color-inverse
 
 /* ------ end slideshow ------ */
